fixed formatting issues

--- a/css/main.css
+++ b/css/main.css
@@ -10,24 +10,40 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font-family: "Crimson Text"
+  font-family: "Crimson Text";
   color: #222;
+  line-height: 1.3;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
+header {
+  margin: 0 0 1rem;
+}
+
 article {
   max-width: 43em;
+  margin: 0 auto;
+  padding: 1.5rem;
 }
 
 article h1 {
   font-weight: normal;
+  margin: 0;
 }
 
 article header {
   border-bottom: 1px solid #999;
+}
+
+article p {
+  margin: 0 0 1rem;
 }
 
 article header p {
@@ -36,60 +52,47 @@ article header p {
 
 article > p:last-child {
   border-bottom: 1px solid #999;
+  padding-bottom: 1.5rem;
+}
+
+article ol {
+  padding-left: 1rem;
 }
 
 blockquote {
   max-width: 25em;
   color: #555;
   font-size: 1.125rem;
+  margin: 1.5rem auto;
 }
 
 .quote {
   color: #999;
 }
 
-@media only screen and (min-width: 90em) {
+@media only screen and (min-width: 38em) {
 
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
 }
 
 @media only screen and (min-width: 60em) {
 
   html {
-    font-size: 1.15rem;
+    font-size: 120%;
     line-height: 1.5;
-  }
-
-  article {
-    min-width: 42em;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  h1 {
-    margin: 0;
-  }
-
-  article p {
-    margin: 0 0 1.5rem;
-  }
-
-  header {
-    margin: 0 0 1.5rem;
   }
 
   article ol {
     padding-left: 0;
   }
+}
 
-  article > p:last-child {
-    padding-bottom: 1.5rem;
-  }
+@media only screen and (min-width: 90em) {
 
-  blockquote {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    margin: 1.5rem 0;
+  html {
+    font-size: 130%;
   }
 }
